--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
-		"babel-core": "6.17.0",
-		"babel-loader": "6.2.5",
-		"babel-preset-latest": "6.16.0",
-		"babel-register": "6.16.3",
+		"babel-preset-env": "^1.7.0",
 		"chai": "3.5.0",
 		"chalk": "1.1.3",
 		"cheerio": "0.22.0",
@@ -55,7 +52,9 @@
 	},
 	"homepage": "https://github.com/JasonRobnson/psTemplateDevelopmentEnv#readme",
 	"dependencies": {
-		"braces": "^3.0.2",
-		"lodash": "^4.17.14"
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.5",
+		"babel-plugin-dynamic-import-node": "^2.3.0",
+		"babel-register": "^6.26.0"
 	}
 }
