--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"prestart": "babel-node buildScripts/startMessage.js",
-		"start": " babel-node buildScripts/srcServer.js"
+		"start": " npm-run-all --parallel open:src lint:watch",
+		"open:src": "babel-node buildScripts/srcServer.js",
+		"lint": "esw webpack.config.* src buildScripts --color ",
+		"lint:watch": "npm run lint -- --watch",
+		"localtunnel": "lt --port 3000",
+		"test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
 	},
 	"repository": {
 		"type": "git",
@@ -15,7 +19,7 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
-		"chai": "3.5.0",
+		"chai": "^3.5.0",
 		"chalk": "1.1.3",
 		"cheerio": "0.22.0",
 		"compression": "^1.7.4",
