--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.5",
 		"babel-plugin-dynamic-import-node": "^2.3.0",
-		"babel-register": "^6.26.0"
+		"babel-register": "^6.26.0",
+		"whatwg-fetch": "^3.0.0"
 	}
 }
