--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"lint:watch": "npm run lint -- --watch",
 		"localtunnel": "lt --port 3000",
 		"test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-		"test:watch": "npm run test -- --watch"
+		"test:watch": "npm run test -- --watch",
+		"build": "babel-node buildScripts/build.js"
 	},
 	"repository": {
 		"type": "git",
